Avoid warning about `--add-opens` from `compileTestJava` task
fixes: https://github.com/java9-modularity/gradle-modules-plugin/issues/211

Avoids ``--add-opens has no effect at compile time` warnings when compiling test code by filtering out
`--add-opens` entries from the `module-info.test` file when executing the `compileTestJava` task.